Fixed layout styling for team and mission classes. Modified mission__img to fill width of viewport and adjusted spacing between elements within mission class.

--- a/css/about.css
+++ b/css/about.css
@@ -4,17 +4,19 @@
 
 /* mission */
 .mission {
+  padding-bottom: 30px;
   text-align: center;
 }
 
 .mission__img {
   object-fit: cover;
   height: 250px;
-  width: 100%;
+  margin: -15px -10px;
+  width: 100vw;
 }
 
 .mission__title {
-  margin: 15px 0px 0px 0px;
+  margin: 30px 0px 0px 0px;
   text-transform: uppercase;
 }
 
@@ -24,7 +26,7 @@
 }
 
 .mission__body {
-  margin: 15px 10px;
+  margin: 15px 0px 0px 0px;
 }
 
 /* team */
@@ -32,7 +34,6 @@
   align-items: center;
   display: flex;
   flex-direction: column;
-  padding-bottom: 40px;
 }
 
 .team__divider {
